nav fix on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ nav ul{
     list-style: none;
     display: flex;
     margin: 0 20px;
+    flex-flow: row wrap;
+    justify-content: center;
     
 }
 
@@ -312,8 +314,8 @@ main{
         flex-flow: column;
     }
     
-    nav{
-        align-self: auto;
+    nav ul{
+        margin: 0;
     }
 
     .profile-name{
@@ -331,3 +333,16 @@ main{
     }
 }
 
+@media screen and (max-width:500px){
+    nav ul{
+        flex-flow: row wrap;
+    }
+
+    nav{
+        width: 100%;
+    }
+
+    nav ul li{
+        width: 40%;
+    }
+}
